<resources>
    <string name="app_name">OpenApi</string>
    <string name="main_name">SHARE BOOK</string>
    <string name="face_login">f │페이스북으로 계속하기</string>
    <string name="facebook_app_id">1084024958688480</string>
    <string name="fb_login_protocol_scheme">fb1084024958688480</string>
    <string name="list_item_title">제목: </string>
    <string name="list_item_author">작가: </string>
    <string name="list_item_publish">출판사: </string>
    <string name="list_item_year">출판년도 :</string>
    <string name="list_item_isbn">일련변호: </string>
    <string name="comment_review">한 줄 리뷰</string>
    <string name="edit_hint">한 줄 리뷰를 남겨주세요</string>
    <string name="review">한 줄 리뷰를 남겨주세요</string>
    <string name="review_btn">리뷰 등록하기</string>
    <string name="review_text">한 줄 리뷰를 작성해보세요</string>
    <string name="main_edit">책 제목을 검색해주세요</string>
</resources>