<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".BookComment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/comment_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/positiveColor"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_name"
                android:textColor="#fff"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>


        <ImageView
            android:id="@+id/comment_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:src="@drawable/ic_book"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/comment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comment_image"
            tools:text="title" />

        <TextView
            android:id="@+id/comment_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comment_title"
            tools:text="title" />


        <LinearLayout
            android:id="@+id/comment_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:background="@drawable/item_background"
            android:orientation="horizontal"
            android:padding="5sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comment_author">

            <LinearLayout
                android:id="@+id/lay1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/with_user"
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:src="@drawable/ic_user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="함께 읽는 사람" />

                <TextView
                    android:id="@+id/with_user_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0명" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/review"
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:src="@drawable/ic_dialogue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="리뷰" />

                <TextView
                    android:id="@+id/review_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0명" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/comment_lay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:background="@drawable/item_background"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comment_lay">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sub_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/line_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="5sp"
                    android:text="@string/comment_review"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="@id/sub_con"
                    app:layout_constraintTop_toTopOf="@id/sub_con" />

                <ImageButton
                    android:id="@+id/more_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                    app:layout_constraintTop_toTopOf="@id/sub_con"
                    app:layout_constraintRight_toRightOf="@id/sub_con"
                    android:layout_marginRight="15sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comment_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/comment_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="10sp"
                    android:layout_weight="0.8"
                    android:background="@drawable/edit_background"
                    android:hint="@string/edit_hint"
                    android:imeOptions="actionDone"
                    android:maxLength="17"
                    android:maxLines="3"
                    android:padding="10sp" />

                <Button
                    android:id="@+id/edit_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="5sp"
                    android:layout_weight="0.2"
                    android:background="@drawable/btn_background"
                    android:text="등록"
                    android:textColor="#fff" />
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>